Version 2.11 -  4 July 2014 by Per Øyvind Karlsen <proyvind@moondrake.org>

- update to kernel-nrj-2.14.10-1
- rename from 'rescue' to 'ucDrakx' for prompt & hostname

Version 2.10 - 23 June 2014 by Per Øyvind Karlsen <proyvind@moondrake.org>

- fix broken title text in grub theme

Version 2.9 - 23 June 2014 by Per Øyvind Karlsen <proyvind@moondrake.org>

- use /etc/fstab from setup package

Version 2.8 - 22 June 2014 by Per Øyvind Karlsen <proyvind@moondrake.org>

- revert accidental inclusion of udev network interface renaming rule again

Version 2.7 - 15 June 2014 by Per Øyvind Karlsen <proyvind@moondrake.org>

- include acpi-cpufreq
- include platform driver autoload udev rules
- sync with kernel-3.15
- make sure to not include default grub2 theme

Version 2.6 - 24 May, by Per Øyvind Karlsen <proyvind@moondrake.org>

- include configuration, init script etc. for udhcpd

Version 2.5 - 19 May, by Per Øyvind Karlsen <proyvind@moondrake.org>

- drop gnome-themes-standard
- add /lib/module-init-tools/ldetect-lst-modules.alias
- replace 'tset' with 'tty'
- add xfs_freeze & xfs_io
- update for compatibility with latest grub2
- sync with kernel-3.14

Version 2.4 - 10 April, by Per Øyvind Karlsen <proyvind@moondrake.org>

- drop mount.nfs from stage1 as busybox has nfs mount support
- sync installer grub2 theme with system grub2 theme
- sync with kernel-3.12
- include "sdhci-acpi" for eMMC (mga#11812)

Version 2.3 - 11 January, by Per Øyvind Karlsen <proyvind@moondrake.org>

- include some more of jfs utils
- ship uClibc build of hdparm to be able to repair damaged sectors

Version 2.2 - 20 December, by Per Øyvind Karlsen <proyvind@moondrake.org>

- adapt to latest mdadm
- fix boot from harddisk option properly
- revert inclusion of network name udev rule that got accidentally merged from
  mageia earlier
- don't ship packdrake due to it's perl dependency and lack of relevance since
  we switched from using hdlist to synthesis by default ages ago