@@ -1,3 +1,5 @@
+- fix correct path of /bin/loadkeys
+
 Version 2.11 -  4 July 2014 by Per Øyvind Karlsen <proyvind@moondrake.org>
 
 - update to kernel-nrj-2.14.10-1
